<resources>
    <string name="app_name">ThirdMonthExam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_to_your_account">Sign to your account</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
</resources>