<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <ImageView android:id="@+id/imageBuildRegister"
        android:layout_width="250dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/building"/>

    <TextView android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:text="@string/register"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBuildRegister"/>

    <TextView android:id="@+id/textCreateYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textRegister"
        app:layout_constraintTop_toBottomOf="@id/textRegister"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="Create your account"
        android:textColor="@color/darkGray"/>

    <TextView  android:id="@+id/textYourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCreateYourAccount"
        app:layout_constraintStart_toStartOf="@id/textCreateYourAccount"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:text="@string/your_name"/>

    <EditText android:id="@+id/RegisterNameEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/textYourName"
        app:layout_constraintTop_toBottomOf="@id/textYourName"
        android:layout_marginTop="7dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/login_edittext_shape"
        android:drawableStart="@drawable/user_icon"
        android:paddingStart="10dp"
        android:hint="Jonathan Smith"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:textSize="15sp"
        android:textColorHint="@color/darkGray"/>

    <TextView  android:id="@+id/textYourEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RegisterNameEditText"
        app:layout_constraintStart_toStartOf="@id/RegisterNameEditText"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:text="@string/your_email"/>

    <EditText android:id="@+id/RegisterEmailEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/textYourEmailRegister"
        app:layout_constraintTop_toBottomOf="@id/textYourEmailRegister"
        android:layout_marginTop="7dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/login_edittext_shape"
        android:drawableStart="@drawable/message_icon"
        android:paddingStart="10dp"
        android:hint="mymail@domain.abc"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        android:textSize="15sp"
        android:textColorHint="@color/darkGray"/>

    <TextView android:id="@+id/textPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailEditText"
        app:layout_constraintStart_toStartOf="@+id/RegisterEmailEditText"
        android:layout_marginTop="25dp"
        android:textSize="14sp"
        android:text="@string/password"
        android:textColor="@color/black"/>

    <EditText android:id="@+id/RegisterPasswordEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/textPasswordRegister"
        app:layout_constraintTop_toBottomOf="@id/textPasswordRegister"
        android:layout_marginTop="7dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/login_edittext_shape"
        android:drawableStart="@drawable/lock_icon"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:hint=" *********"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:drawableEnd="@drawable/visibility_off_icon"
        android:paddingEnd="10dp"/>

    <TextView android:id="@+id/IHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterPasswordEditText"
        android:layout_marginTop="25dp"
        android:textSize="14sp"
        android:textColor="@color/pinkAndRed"
        android:text="I don't have account"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/IHaveAnAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/login_register_shape"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>